--- a/package.json
+++ b/package.json
@@ -6,6 +6,11 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/alaa-hany/ep-argv.git"
+  },
+  "homepage": "https://github.com/alaa-hany/ep-argv",
   "keywords": [
     "argv",
     "getopt",
